# Digital-Image-Processing-Homework-Template-

./: .gitignore  CMakeLists.txt  Makefile  README.md  第一次编程作业_2023211777_白宏林.tar
Source/digitalImageProcessing/: .project_config.cmake
Source/digitalImageProcessing/include/: histogram.h  image.h  interpolators.h  laplacian.h  median_filter.h  morphology.h  pixel.h  pyramid.h  tests.h  utils.h  wavelet.h
Source/digitalImageProcessing/src/: main.cpp  utils.cpp
data/03/wavelet/edge_output/: demo-2_edge_th1.0.tif  demo-2_edge_th1.5.tif  demo-2_edge_th2.0.tif
data/03/wavelet/output/: demo-2_fwt_lv1.tif  demo-2_fwt_lv3.tif
data/04/binary/output/: Fig0929(a)(text_image)_border_clear.tif  Fig0929(a)(text_image)_hole_fill.tif  Fig0929(a)(text_image)_long_char.tif
data/04/gray/output/: Fig0940_tophat.tif  Fig0940_tophat_binary.tif  Fig0941_granulometry.tif  Fig0943_watershed_grad.tif  Fig0943_watershed_markers.tif
ppt/slides/: slide1.xml  slide2.xml  slide3.xml  slide4.xml
references/: 第三次作业说明.pptx
references/04/: 第4次作业说明.pptx
